--- a/public/jquery.html
+++ b/public/jquery.html
@@ -16,11 +16,12 @@
 
 <body>
     <div class="container">
+        <h1>Daftar User</h1>
+        <form id="form-search">
         <div class="card">
             <div class="card-header">
                 <h1>Form Pencarian</h1>
             </div>
-            <form id="form-search">
                 <div class="card-body">
                     <div class="row mb-3">
                         <label for="searchName" class="col-sm-2 col-form-label">Nama</label>
@@ -37,8 +38,7 @@
                     </fieldset>
                     <div class="row mb-3">
                         <label for="married" class="col-sm-2 col-form-label">Sudah Menikah</label>
-                        <div class="col-sm-10">
-                            </label>
+                        <div class="col-sm-10"> 
                             <input class="form-check-input" style="padding: 13px" type="checkbox" id="married"
                                 name="married">
                             <label class="form-check-label" for="married">
