vanilla js and jquery done

--- a/public/index.html
+++ b/public/index.html
@@ -16,8 +16,7 @@
 <body>
     <div class="container">
          <div class="card">
-          <h2>Welcome <%= user.name %></h2>
-          <h4>Switch to <a href="/jquery.html">JQuery</a> or <a href="/logout">Logout</a></h4>
+          <h2>Welcome <%= user.name %>, </h2>   
             <div class="card-header">
                 <h1>Form Pencarian</h1>
                 </div>
